# cslex

./: .gitignore  CMakeLists.txt  Keywords.h  Operators.h  Position.h  STATIC_ANALYSIS_REPORT_1.md  Token.h  main.cpp
app/: LexerComparisonApp.cpp  LexerComparisonApp.h
io/: ISourceRepository.h  SourceDocument.h  SourceRepository.cpp  SourceRepository.h
lexers/: Diagnostic.h  ILexer.h  LexerResult.h  LexicalException.h  LexicalRules.h
lexers/fsm/: FSMLexer.cpp  FSMLexer.h  FsmRuleRegistry.h  InputBuffer.cpp  InputBuffer.h
lexers/fsm/processors/: CharProcessor.h  CommentProcessor.h  IProcessor.h  IdentifierProcessor.h  InterpolatedStringProcessor.h  NumberProcessor.h  OperatorProcessor.h  PreprocessorProcessor.h  SeparatorProcessor.h  StringProcessor.h  VerbatimStringProcessor.h
lexers/regex/: RegexLexer.cpp  RegexLexer.h  RegexPatterns.h
scripts/: generate_coverage.sh
tests/: app_mock_tests.cpp  conformance_tests.cpp  coverage_tests.cpp  demo_invalid.cs  demo_valid.cs  diagnostic_tests.cpp  fsm_lexer_tests.cpp  fsm_mock_tests.cpp  lexer_contract_tests.cpp  lexer_strict_mode_tests.cpp  lexer_tests.cpp  regex_lexer_tests.cpp  source_repository_tests.cpp  test_runner.cpp  test_samples.cs  test_utils.h  token_tests.cpp
